--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
      <h1 class="Compt-heading">My Competitive Coding Profile</h>
        <div class="Strength aligned" data-aos="slide-left" data-aos-duration="2800">
          <p class="CCtext">I have started competitive Coding on CodeChef platform recently, currently i am a 2 star Coder at Codechef with a rating of 1581
-           and my all time Highest rating is also 1581 and aiming to cross 1600 rating to be a 3 star coder as soon as possible!!
+           and my all time Highest rating is also 1588 and aiming to cross 1600 rating to be a 3 star coder as soon as possible and also on codeforces i have around 800 ratings as well!!
            I mainly participate in two shorter formats i.e. Cook-Off and Lunchtime and sometimes particpate in Long-Challenge contest also, but i found Long-Challenge much beneficial as it
            is much competitive and level of que are really slightly high in this contest as compared to other two contests of CodeChef!! </p>
          <img class="Strengthimage" src="images/CodeChef.jpg">
